# spout2-python

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: FUNDING.yml
assets/: build_banner.py
docs/: ARCHITECTURE.md
examples/: demo.bat  inference_loop.py  preview_example.py  preview_local.bat  preview_local.py  receive_example.py  send_example.py  share_image.py  tensor_receive.py  tensor_send.py
spout/: __init__.py  _base.py  _lib.py  receiver.py  sender.py  utils.py
tests/: test_cpu_share.py  test_cross_process.py  test_memshare_mode.py  test_preview_local_e2e.py  test_pyglet_context.py  test_same_process.py  test_slot98_probe.py  test_vtable_audit.py  test_vtable_dx_probe.py  test_with_opengl.py  vtable_audit_report.json
